# 3D-Engine

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
src/: Application.h  Applicaton.h  Linalg.h  Renderer.cpp  Shaderer.h  SimpleParser.h  main.cpp  renderer.cpp  renderer.h  util.h  world.h
src/buffers/: ImageBuffer.h  ZBuffer.h
src/core/: ImageBuffer.h
src/core/primitives/: Color.h  Polygon.h  Vertex.h
src/interaction/: KeyBoardInteraction.h  KeyBoardInteractor.cpp  WindowManager.cpp  WindowManager.h
src/objects/: Light.h  Scene.h  camera.h  mesh.h
src/objects/primitives/: Polygon.h
src/parser/: SimpleParser.cpp  SimpleParser.h
src/primitives/: primitives.h
src/scene/: Camera.h  Mesh.h  PointLight.h  Scene.h
src/stages/FragmentShaderStage/: FragmentShaderStage.cpp  FragmentShaderStage.h
src/stages/GeometryStage/: GeometryStage.cpp  GeometryStage.h  Plane.h
src/stages/RasterizationStage/: Fragment.h  FragmentBuffer.h  RasterizationStage.cpp  RasterizationStage.h  ZBuffer.h
src/stages/SceneLoaderStage/: SceneLoader.cpp  SceneLoader.h
src/stages/WriteStage/: WriteStage.cpp  WriteStage.h
src/util/: VectorTransforms.h
